--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="searchName">Search Queue by Name</string>
     <string name="view">View All Queues</string>
     <string name="login">Login</string>
+    <string name="id">ID: </string>
+    <string name="your_password">Your Password: </string>
 
     <color name="Blue">#00f2f2</color>
     <color name="Black">#000000</color>
